--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
+<!--- BeeTheWeb Website Designed by Shanua Rodriguez - May 2021 -->
+<!--- Submitted for Project 1 HTML/CSS Upperlline -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Welcome to BeeTheWeb</title>
+    
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="script.js"></script>
+    <ul>
+  <li><a href="#about">About</a></li>
+  <li><a href="#contact">Bee</a></li>
+  <li><a href="#news">Bee Anatomy</a></li>
+  <li><a class="active" href="#home">About</a></li>
+  <li style="float:left"><a class="active" href="#about">BeeTheWeb</a></li>
+  
+</ul>
   </body>
 </html>
