--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </h1>
     <p class="section"> <b>Love them? Fear them? Hate them?</b> Bees are a fascinating species and an important part of today's world. This website tries to bring a new face to what bees do, their purpose as pollinators and how that helps maintain our food supply, and how they have even become a part of human culture for many, many years.
     </p>
-    <p class="section"><a href="https://www.newscientist.com/definition/bees/">New Scientist</a> informs us of how important Bees mean to humans as well as how intelligent they are. Not only are they excellent pollinators of crops and have an unusual kind of bee known as the honey bee which is an suppliers of honey, but there are also cool facts about how the Queens of a hive are chosen, female bees vs. male bees, how they mate and fertilize new life, and the fact that there are over 20,000 species of bees that we are aware of! But wait! Don't leave this site just yet and learn more from New Scientist's website. This site has some cool, compiled documentation about bees too! <b class="specialText">Stay awhile.</b>
+    <p class="section"><a href="https://www.newscientist.com/definition/bees/" target="_blank" rel="noopener noreferrer">New Scientist</a> informs us of how important Bees mean to humans as well as how intelligent they are. Not only are they excellent pollinators of crops and have an unusual kind of bee known as the honey bee which is an suppliers of honey, but there are also cool facts about how the Queens of a hive are chosen, female bees vs. male bees, how they mate and fertilize new life, and the fact that there are over 20,000 species of bees that we are aware of! But wait! Don't leave this site just yet and learn more from New Scientist's website. This site has some cool, compiled documentation about bees too! <b class="specialText">Stay awhile.</b>
     </p>
   </div>
 
@@ -50,11 +50,11 @@
   </div>
 
   <!--3rd Section: Bee Types-->
-<div id="bee_types" class="diagram">
+<div id="bee_types" class="diagram" style="height: 100%";>
     <h1>
       Bee Types
     </h1>
-      <p class="section"> Here are a few examples of some of the amazing species of bees thanks to <a href="https://www.treehugger.com/how-identify-different-types-bees-4864333">Treehugger.com.</a> Remember that there are over 20,000 of them!
+      <p class="section" style="text-align: center"> Here are a few examples of some of the amazing species of bees thanks to <a href="https://www.treehugger.com/how-identify-different-types-bees-4864333">Treehugger.com.</a> Remember that there are over 20,000 of them!
     </p>
 
   <div class="gallery">
@@ -109,27 +109,115 @@
 </div>
 
   <!--4th Section: Bee Symbolism-->
- <!-- <div id="bee_symbol" class="diagram" >
-    <h1 style="margin-left: 60px;">Bee Symbolism</h1>
-    <p class="section"> Here are a few examples of how bees have been symbolic to us for over thousands of years thanks to <a href="https://www.worldbirds.org/bee-symbolism/#symbolism">WorldBirds.org.</a>
-    </p>
-  </div> -->
+  <div>
   <div class="row">
   <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <h1> </h1>
+    <p> </p>
+  </div>
+
+  <div id="bee_symbol" class="column">
+    <h1>Bee Symbolism</h1>
+    <p>Here are a few examples of how bees have been symbolic to us for over thousands of years thanks to <a href="https://www.worldbirds.org/bee-symbolism/#symbolism" target="_blank" rel="noopener noreferrer">WorldBirds.org.</a>You can find out more at that link.</p>
+  </div>
+  </div>
+  </div>
+
+
+  <div>
+  <div class="row">
+  <div class="column">
+    <h2>Bee Symbolism & Meaning</h2>
+    <ol class="b">
+      <li>Important to nature</li><br>
+      <li>Important to the economy</li><br>
+      <li>Fertility & sexuality</li><br>
+      <li>Focused</li><br>
+      <li>The nature of work</li>
+    </ol>
   </div>
   
   <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <h2>Bee Native American Symbolism</h2>
+    <ol class="b">
+      <li>Dance & celebration</li><br>
+      <li>To be stung equates to rewards</li><br>
+      <li>Honesty</li><br>
+      <li>Serving the community</li><br>
+      <li>Traditional colors: black & gold</li>
+    </ol>
   </div>
   
   <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <h2>Bee Christianity Symbolism</h2>
+    <ol class="b">
+      <li>Biblical references to bee & honey</li><br>
+      <li>Of sweet and gentle character</li><br>
+      <li>Symbol of activity, diligence, and good order</li><br>
+      <li>Christian vigilance</li><br>
+      <li>The church as a beehive symbolizing unity</li>
+    </ol>
   </div>
 </div>
+</div>
 
+ <!--5th Section: Bee fandom-->
+  <div>
+  <div class="row">
+  <div class="column">
+    <h1> </h1>
+    <p> </p>
+  </div>
+
+  <div id="bee_fan" class="column">
+    <h1>Bee Fandom</h1>
+    <p>Here are a few examples of how bees have made their way into culture and the arts.
+  </div>
+  </div>
+  </div>
+
+
+  <div>
+  <div class="row">
+  <div class="column">
+    <h2>Bees in Dungeons & Dragons</h2>
+    <img src="https://dragoesdosreinos.files.wordpress.com/2010/05/abeil.png" width="100" alt="Abeil or Bee people from dungeons and dragons" style="padding-left: 8em;" >
+    <ol class="b">
+      <li><b>The Abeil</b> (The Bee People)</li><br>
+      <li>A kind of monstrous humanoid / bee-like elves</li><br>
+      <li><b>Soldiers or storm-wings</b> are the aggressive protectors</li><br>
+      <li><b>Vassals</b> are the workers of the colonies</li><br>
+      <li>Queens are the rulers of the abeil</li>
+    </ol>
+  </div>
+  
+  <div class="column">
+    <h2>Bees in Marvel & DC Comics</h2>
+    <ol class="b">
+      <li>Fritz von Meyer aka Swarm (Marvel)</li><br>
+      <li>Madame Swarm (Marvel)</li><br>
+      <li>Bumblebee (DC)</li><br>
+      <li>Queen Bee (DC)</li><br>
+      <li>Red Bee (DC)</li>
+    </ol>
+  </div>
+  
+  <div class="column">
+    <h2>Bees in the Movies</h2>
+    <ol class="b">
+      <li>The Deadly Bees (1967)</li><br>
+      <li>Killer Bees (1974)</li><br>
+      <li>The Swarm (1978)</li><br>
+      <li>Bee Movie (2007)</li><br>
+      <li>Stung (2015)</li>
+    </ol>
+  </div>
+</div>
+</div>
+
+<footer>
+  <p>Author: Shanua Rodriguez &#169; 2021<br>
+  <a href="mailto:hege@example.com">shanua@gmail.com</a></p>
+</footer>
   </body>
 </html>
